added sql support and css

--- a/public/app.css
+++ b/public/app.css
@@ -8,3 +8,10 @@ align-content:start;
   text-align: justify;
   
 }
+hr {
+  margin: 1rem 0;
+  color: inherit;
+  background-color: currentColor;
+  border: 0;
+  opacity: 0.25;
+}
