--- a/public/nav.ejs
+++ b/public/nav.ejs
@@ -15,7 +15,8 @@
           </li>
           <%}else{ %>
             <li class="nav-item">
-             <a>~for posting need to login~</a> 
+              <a class="nav-link " aria-current="page" href="/">~for posting need to login~</a>
+             
             </li>
             <%}%>
         
