--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,8 +4,8 @@
   <body>
     <%- include('./nav') %>
     <div class="container text-center">
-      <div class="row">
-        <div class="col-8">
+      <div class="row mt-5">
+        <div class="col-8 text-start">
           <%- include('./posts') %>
         </div>
         <div class="col-4">col-4</div>
