--- a/public/singlepost.ejs
+++ b/public/singlepost.ejs
@@ -25,6 +25,37 @@
               </p>
             </div>
             <div class="row">
+              <div class="col-4 ">
+                <p class="h3 text-start text-secondary ">Comments</p>
+              </div>
+            </div>
+            <% for(let i=0;i < comments.length; i++){%>
+            <div class="row">
+                
+              <div class="col-1 pe-0">
+                <img
+                    src="https://ichef.bbci.co.uk/news/800/cpsprodpb/475B/production/_98776281_gettyimages-521697453.jpg"
+                    class="avatar avatar-32 bg-light rounded-circle text-white p-1" alt="...">
+              </div>
+              <div class="col-auto ps-0">
+                <p class="text-start text-primary h4">
+                  <%= comments[i].email %>
+                </p>
+              </div>
+              <div class="col-auto pe-0">
+                <p class="text-start h5">03/03/2023
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-1 pe-0">
+              </div>
+              <div class="col-auto ps-0">
+                <p><%= comments[i].comment %></p>
+              </div>
+            </div>
+            <%}%>
+            <div class="row">
               <div id="liveAlertPlaceholder"></div>
               <%if(!isLogin){ %>
                 <div class="input-group mb-3">
@@ -36,26 +67,10 @@
                 <div class="input-group">
                   <textarea class="form-control" id="comment" aria-label="With textarea"></textarea>
                 </div>
-                <div class="input-group mt-3">
-                  <button type="button" id="create" class="float-start btn btn-success">Create</button>
+                <div class=" mt-3 d-grid gap-2 d-md-flex justify-content-md-end">
+                  <button type="button" id="create" class="float-end btn btn-success">Create</button>
                 </div>
-                  
             </div>
-
-            <div class="row">
-              <% for(let i=0;i < comments.length; i++){%>
-                <h6 class="col-1 content-left">
-                  <p>From: <%= comments[i].email %>
-                  </p>
-                </h6>
-
-                <p class="content-justify">
-                  Text:
-                  <%= comments[i].comment %>
-                </p>
-                <%}%>
-            </div>
-            
           </div>
           <div class="col-4">col-4</div>
         </div>
