add_date_for_comments

--- a/public/singlepost.ejs
+++ b/public/singlepost.ejs
@@ -43,7 +43,7 @@
                 </p>
               </div>
               <div class="col-auto pe-0">
-                <p class="text-start h5">03/03/2023
+                <p class="text-start h5"><%= comments[i].human_date %>
                 </p>
               </div>
             </div>
