--- a/public/singlepost.ejs
+++ b/public/singlepost.ejs
@@ -16,7 +16,7 @@
                 </h3>
               </div>
               <p class="content-justify">
-                <%= post.content %>
+                <%- post.content %>
               </p>
               <p class="content-justify">
                 published by <a href="/profile/<%= user.id %>">
