add last comments and view rate

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -8,7 +8,10 @@
         <div class="col-8 text-start">
           <%- include('./posts') %>
         </div>
-        <div class="col-4">col-4</div>
+        <div class="col-4 text-start">
+          <%- include('./rate')%>
+           <%- include('./comments')%> 
+        </div>
       </div>
     </div>
   </body>
