--- a/public/posts.ejs
+++ b/public/posts.ejs
@@ -6,3 +6,19 @@
       <p class="content-justify"><%- posts[i].short_content %></p>
   </div>
 <%}%>
+<% if(count > limit){%> 
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <% if(page != 1){%> 
+      <li class="page-item"><a class="page-link" href="/page/<%= page -1%>">Previous</a></li>
+      <%}%>
+      <% for(let i = 0; i < Math.ceil(count/limit);i++) {%>   
+      <li class="page-item"><a class="page-link" href="/page/<%=i+1%>"><%= i+ 1%></a></li>
+      <%}%>
+      <% if(page < Math.ceil(count/limit)){%>
+      <li class="page-item"><a class="page-link" href="/page/<%= page +1%>">Next</a></li>
+      <%}%>
+    </ul>
+  </nav>
+ 
+<%}%>
