--- a/public/registration.ejs
+++ b/public/registration.ejs
@@ -25,7 +25,10 @@
             <button type="button" id="registration" class="float-start btn btn-success">Registration</button>
           </div>
         </div>
-        <div class="col-4">col-4</div>
+        <div class="col-4 text-start">
+          <%- include('./rate')%>
+          <%- include('./comments')%> 
+        </div>
       </div>
     </div>
     <script>
