--- a/public/login.ejs
+++ b/public/login.ejs
@@ -22,7 +22,10 @@
               <button type="button" id="enter" class="float-start btn btn-success">Enter</button>
             </div>
           </div>
-          <div class="col-4">col-4</div>
+          <div class="col-4 text-start">
+            <%- include('./rate')%>
+            <%- include('./comments')%> 
+          </div>
         </div>
       </div>
       <script>
