--- a/public/rate.ejs
+++ b/public/rate.ejs
@@ -1,6 +1,9 @@
 
 <div class=" mt-0">
-  <p class="h4">КУРС ДОЛЛАРА  </p>
-  <p><%= rate%>:BLR  </p>
+  <p class="h4">КУРС ВАЛЮТ </p>
+  <%for(let i = 0; i < rate.length; i++){%>
+
+  <p><%= rate[i].Cur_Abbreviation%>:<%= rate[i].Cur_OfficialRate%> </p>
+  <%}%>
 </div>
 
