--- a/public/app.css
+++ b/public/app.css
@@ -11,7 +11,15 @@ align-content:start;
 hr {
   margin: 1rem 0;
   color: inherit;
-  background-color: currentColor;
   border: 0;
   opacity: 0.25;
+}
+body,html{
+  margin:0;
+  width:100%;
+  background-color: antiquewhite !important;
+}
+
+html{
+    background-color: antiquewhite;
 }
