--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <%- include('./head')%>
-  <body>
+  <body class="body">
     <%- include('./nav') %>
-    <div class="container text-center">
+    <div  class="container text-center">
       <div class="row mt-5">
         <div class="col-8 text-start">
           <%- include('./posts') %>
