--- a/public/singlepost.ejs
+++ b/public/singlepost.ejs
@@ -18,11 +18,15 @@
               <p class="content-justify">
                 <%- post.content %>
               </p>
-              <p class="content-justify">
-                published by <a href="/profile/<%= user.id %>">
-                  <%= user.username %>
-                </a>
-              </p>
+              <%if(canEdit){%>
+                <a  href="/posts/<%= post.id%>/edit"  class="button float-end btn btn-success">Edit</a>
+                <%}%>
+                  <p class="content-justify">
+                    published by <a href="/profile/<%= user.id %>">
+                      <%= user.username %>
+                    </a>
+                  </p>
+
             </div>
             <div class="row">
               <div class="col-4 ">
@@ -30,47 +34,50 @@
               </div>
             </div>
             <% for(let i=0;i < comments.length; i++){%>
-            <div class="row">
-                
-              <div class="col-1 pe-0">
-                <img
+              <div class="row">
+
+                <div class="col-1 pe-0">
+                  <img
                     src="https://ichef.bbci.co.uk/news/800/cpsprodpb/475B/production/_98776281_gettyimages-521697453.jpg"
                     class="avatar avatar-32 bg-light rounded-circle text-white p-1" alt="...">
-              </div>
-              <div class="col-auto ps-0">
-                <p class="text-start text-primary h4">
-                  <%= comments[i].email %>
-                </p>
-              </div>
-              <div class="col-auto pe-0">
-                  <p class="text-start h5"><%= comments[i].human_date %>
+                </div>
+                <div class="col-auto ps-0">
+                  <p class="text-start text-primary h4">
+                    <%= comments[i].email %>
                   </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-1 pe-0">
-              </div>
-              <div class="col-auto ps-0">
-                <p><%= comments[i].comment %></p>
-              </div>
-            </div>
-            <%}%>
-            <div class="row">
-              <div id="liveAlertPlaceholder"></div>
-              <%if(!isLogin){ %>
-                <div class="input-group mb-3">
-                  <input type="text" id="email" class="form-control" placeholder="Email" aria-label="Username"
-                    aria-describedby="basic-addon1">
-                  <span class="input-group-text" id="basic-addon1">@</span>
                 </div>
-                <%}%>
-                <div class="input-group">
-                  <textarea class="form-control" id="comment" aria-label="With textarea"></textarea>
+                <div class="col-auto pe-0">
+                  <p class="text-start h5">
+                    <%= comments[i].human_date %>
+                  </p>
                 </div>
-                <div class=" mt-3 d-grid gap-2 d-md-flex justify-content-md-end">
-                  <button type="button" id="create" class="float-end btn btn-success">Create</button>
+              </div>
+              <div class="row">
+                <div class="col-1 pe-0">
                 </div>
-            </div>
+                <div class="col-auto ps-0">
+                  <p>
+                    <%= comments[i].comment %>
+                  </p>
+                </div>
+              </div>
+              <%}%>
+                <div class="row">
+                  <div id="liveAlertPlaceholder"></div>
+                  <%if(!isLogin){ %>
+                    <div class="input-group mb-3">
+                      <input type="text" id="email" class="form-control" placeholder="Email" aria-label="Username"
+                        aria-describedby="basic-addon1">
+                      <span class="input-group-text" id="basic-addon1">@</span>
+                    </div>
+                    <%}%>
+                      <div class="input-group">
+                        <textarea class="form-control" id="comment" aria-label="With textarea"></textarea>
+                      </div>
+                      <div class=" mt-3 d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button type="button" id="create" class="float-end btn btn-success">Create</button>
+                      </div>
+                </div>
           </div>
           <div class="col-4">col-4</div>
         </div>
@@ -90,14 +97,17 @@
         </div>
       </div>
       <script>
+        let postid = id.getAttribute('postid')
+        
         let id = document.querySelector('#postid')
         let create = document.querySelector('#create')
         let inpemail = document.querySelector('#email')
         let inpcomment = document.querySelector('#comment')
         let alertPlaceholder = document.querySelector('#liveAlertPlaceholder')
+       
         create.onclick = function () {
           axios.post('/comments', {
-            newsid: id.getAttribute('postid'),
+            newsid: postid,
             email: inpemail?.value,
             comment: inpcomment.value
           })
