--- a/public/newpost.ejs
+++ b/public/newpost.ejs
@@ -19,7 +19,10 @@
               <button type="button" id="create" class="float-start btn btn-success">Create</button>
             </div>
           </div>
-          <div class="col-4">col-4</div>
+          <div class="col-4 text-start">
+            <%- include('./rate')%>
+             <%- include('./comments')%> 
+          </div>
         </div>
       </div>
       <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
