--- a/public/singlepost.ejs
+++ b/public/singlepost.ejs
@@ -79,7 +79,10 @@
                       </div>
                 </div>
           </div>
-          <div class="col-4">col-4</div>
+          <div class="col-4 text-start">
+            <%- include('./rate')%>
+             <%- include('./comments')%> 
+          </div>
         </div>
       </div>
       <div class="toast-container position-fixed bottom-0 end-0 p-3">
