--- a/public/nav.ejs
+++ b/public/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Navbar</a>
+    <a class="navbar-brand" href="/">My Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,7 +31,11 @@
         </li>
       <% }else { %>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Hello <%= username %></a>
+          <%if(is_admin){%> 
+          <a class="nav-link" href="/profile">Hello Admin <%= username %></a>
+          <%}else{%>
+            <a class="nav-link" href="/profile">Hello  <%= username %></a>
+            <%}%>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/loginout">LoginOut</a>
